tests/script/negative/holes/holes.s
global int x;

@initial
go(bool b, int n) {
  m = 0;
  z = ?;
  if (?) {
    x = ? + 1
  } else {
    x = ? + ?
  };
  x = 0.5 + ?;
  stay();
}
